--- a/src/styles/seller/seller.scss
+++ b/src/styles/seller/seller.scss
@@ -17,6 +17,12 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 2em;
+
+  div:first-child {
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
 }
 
 .search-filter-div {
